--- a/FurEver/Pages/Index.cshtml
+++ b/FurEver/Pages/Index.cshtml
@@ -16,7 +16,7 @@
     <!-- Main Heading -->
     <h1 class="main-heading">The best way to find your dream dog</h1>
     <p class="subheading">
-        Fluffy, friendly, faithful, or all three... Take the dogmatch quiz to find the perfect dog for you.
+        Fluffy, friendly, faithful, or your FurEver... Take the dogmatch quiz to find the perfect dog for you.
     </p>
 
     <!-- Animated Dog GIF -->
@@ -27,8 +27,8 @@
     <!-- Buttons -->
     <div class="button-container">
         <a asp-page="/DogQuiz" class="btn btn-primary">Test your knowledge on dog breeds</a>
-        <a asp-page="/DogBreed" class="btn btn-primary">All dogs</a>
-        <a asp-page="/quizupdated" class="btn btn-primary">Take the quiz</a>
+        <a asp-page="/DogBreed" class="btn btn-primary">Dog directory</a>
+        <a asp-page="/quizupdated" class="btn btn-primary">Find your FurEver</a>
     </div>
 
     <!-- Example Dog Images -->
