--- a/FurEver/Pages/DogBreed.cshtml
+++ b/FurEver/Pages/DogBreed.cshtml
@@ -42,8 +42,7 @@
                         </div>
 
                         <div class="card-footer text-center">
-                            <!-- Link to Details -->
-                            <a href="/DogDetails?breedName=@breed.General?.Name" class="btn btn-primary">View Details</a>
+                            <a asp-page="/DogDetails" asp-route-breedName="@breed.General?.Name" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
