--- a/FurEver/Pages/DogDetails.cshtml
+++ b/FurEver/Pages/DogDetails.cshtml
@@ -72,13 +72,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="@indoorImageUrl" class="d-block w-100" alt="Indoor image of @name" />
+                                <img src="@indoorImageUrl" alt="indoor-Dog-image" class="d-block w-100" alt="Indoor image of @name" />
                             </div>
                             <div class="carousel-item">
-                                <img src="@outdoorImageUrl" class="d-block w-100" alt="Outdoor image of @name" />
+                                <img src="@outdoorImageUrl" alt="outdoor-dog-image" class="d-block w-100" alt="Outdoor image of @name" />
                             </div>
                             <div class="carousel-item">
-                                <img src="@studioImageUrl" class="d-block w-100" alt="Studio image of @name" />
+                                <img src="@studioImageUrl" alt="studio-dog-image" class="d-block w-100" alt="Studio image of @name" />
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
