Integrated mindlift API

--- a/FurEver/Pages/SearchBooks.cshtml
+++ b/FurEver/Pages/SearchBooks.cshtml
@@ -3,21 +3,17 @@
 @{
 }
 
-<form method="get">
-    <div class="form-group">
-        <label for="searchQuery">Search by Author Name:</label>
-        <input type="text" id="searchQuery" name="searchQuery" class="form-control" placeholder="Enter author name..." value="@Model.SearchQuery" />
-    </div>
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
-
+ 
 @if (Model.BookResults != null && Model.BookResults.Any())
 {
-    <h3>Books by "@Model.SearchQuery":</h3>
+    <h3>Books Reviews from Mindlift:</h3>
     <ul>
         @foreach (var book in Model.BookResults)
         {
-            <li>@book</li>
+            <li>
+                @book.BookTitle
+                <p>@book.BookReview</p>
+             </li>
         }
     </ul>
 }
