--- a/FurEver/Pages/Shared/_Layout.cshtml
+++ b/FurEver/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container primary-container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
